styles/base.css
 /*
SCREEN (Grey) - #C5C1C0 - Used for certain panels as well as gutters
STEEL (Off-Black) - #0A1612 - Used for nav-bar and footer, certain modules
DENIM (Dark Blue) - #1A2930 - Used for contrasting modules
MARIGOLD (Gold) - #F7CE3E - Buttons
MARINE (Light Green) - #57BC90 - Special text/buttons
WHITE - For bulk of text 
*/



 :root {
     --screen-panel: #C5C1C0;
     --steel-nav: #0A1612;
     --denim: #1A2930;
     --marigold-button: #F7CE3E;
     --marine: #57BC90;
 }

 h1 {
    font-family: 'Roboto Slab', serif;
 }

 h2, h3, label, p, a {
     color: white;
     font-family: 'Encode Sans Condensed', sans-serif;
 }

 #home {
     background-color: var(--denim);
 }

 #user-dashboard {
     background-color: var(--denim);
 }

 #leaderboards {
     background-color: var(--denim);
 }

 #about-us {
     background-color: var(--screen-panel);
 }

 h1 {
     font-size: 3em;
 }

 h2 {
     font-size: 2em;
 }

 a {
     text-decoration: none;
 }

 main {
     color: white;
 }

 #rm-logo {
     background-image: url("../src/mr-logo.png");
     width: 8vw;
     height: 5vw;
     background-size: cover;
     padding: .3em 0em .3em .5em;
 }

 #tmdb-logo {
     background-image: url("https://www.themoviedb.org/static_cache/v4/logos/408x161-powered-by-rectangle-green-bb4301c10ddc749b4e79463811a68afebeae66ef43d17bcfd8ff0e60ded7ce99.png");
     width: 13vw;
     height: 5vw;
     background-size: cover;
 }

